# flacopyus

./: Makefile  NOTICE  README.md  README.md.php  pyproject.toml
flacopyus/: __init__.py  args.py  assets.py  cli.py  filesys.py  funs.py  main.py  opus.py  spr.py  test.py
flacopyus/audio/: drum-loop.flac
